set(MV_SRC_FOLDER ${CMAKE_CURRENT_LIST_DIR})

set(UVAtlasSrc
    ${MV_SRC_FOLDER}/pch.h
    ${MV_SRC_FOLDER}/maxheap.hpp
    ${MV_SRC_FOLDER}/isochart/Vis_Maxflow.h
    ${MV_SRC_FOLDER}/isochart/Vis_Maxflow.cpp
    ${MV_SRC_FOLDER}/isochart/vertiter.h
    ${MV_SRC_FOLDER}/isochart/vertiter.cpp
    ${MV_SRC_FOLDER}/isochart/UVAtlasRepacker.h
    ${MV_SRC_FOLDER}/isochart/UVAtlasRepacker.cpp
    ${MV_SRC_FOLDER}/isochart/UVAtlas.cpp
    ${MV_SRC_FOLDER}/isochart/SymmetricMatrix.hpp
    ${MV_SRC_FOLDER}/isochart/sparsematrix.hpp
    ${MV_SRC_FOLDER}/isochart/progressivemesh.h
    ${MV_SRC_FOLDER}/isochart/progressivemesh.cpp
    ${MV_SRC_FOLDER}/isochart/packingcharts.cpp
    ${MV_SRC_FOLDER}/isochart/meshpartitionchart.cpp
    ${MV_SRC_FOLDER}/isochart/meshoptimizestretch.cpp
    ${MV_SRC_FOLDER}/isochart/meshoptimizeboundaries.cpp
    ${MV_SRC_FOLDER}/isochart/meshcommon.inl
    ${MV_SRC_FOLDER}/isochart/meshapplyisomap.cpp
    ${MV_SRC_FOLDER}/isochart/mergecharts.cpp
    ${MV_SRC_FOLDER}/isochart/lscmparam.cpp
    ${MV_SRC_FOLDER}/isochart/isomap.h
    ${MV_SRC_FOLDER}/isochart/isomap.cpp
    ${MV_SRC_FOLDER}/isochart/isochartutil.h
    ${MV_SRC_FOLDER}/isochart/isochartutil.cpp
    ${MV_SRC_FOLDER}/isochart/isochartmesh.h
    ${MV_SRC_FOLDER}/isochart/isochartmesh.cpp
    ${MV_SRC_FOLDER}/isochart/isochart.h
    ${MV_SRC_FOLDER}/isochart/isochartengine.h
    ${MV_SRC_FOLDER}/isochart/isochartengine.cpp
    ${MV_SRC_FOLDER}/isochart/isochart.cpp
    ${MV_SRC_FOLDER}/isochart/isochartconfig.h
    ${MV_SRC_FOLDER}/isochart/imtcomputation.cpp
    ${MV_SRC_FOLDER}/isochart/graphcut.h
    ${MV_SRC_FOLDER}/isochart/graphcut.cpp
    ${MV_SRC_FOLDER}/isochart/callbackschemer.h
    ${MV_SRC_FOLDER}/isochart/basemeshinfo.h
    ${MV_SRC_FOLDER}/isochart/basemeshinfo.cpp
    ${MV_SRC_FOLDER}/isochart/barycentricparam.cpp
    ${MV_SRC_FOLDER}/inc/UVAtlas.h
    ${MV_SRC_FOLDER}/geodesics/minheap.hpp
    ${MV_SRC_FOLDER}/geodesics/mathutils.h
    ${MV_SRC_FOLDER}/geodesics/mathutils.cpp
    ${MV_SRC_FOLDER}/geodesics/ExactOneToAll.h
    ${MV_SRC_FOLDER}/geodesics/ExactOneToAll.cpp
    ${MV_SRC_FOLDER}/geodesics/datatypes.h
    ${MV_SRC_FOLDER}/geodesics/ApproximateOneToAll.h
    ${MV_SRC_FOLDER}/geodesics/ApproximateOneToAll.cpp
)

add_library(UVAtlas STATIC
    ${UVAtlasSrc}
)

target_include_directories(UVAtlas 
PUBLIC
    inc/
	geodesics/
    .
)